--- a/references.bib
+++ b/references.bib
@@ -421,3 +421,11 @@
 	howpublished = {\url{https://github.com/noagarcia/keras_rmac}}
 }
 
+@misc{own-github,
+	title = {Recurring content detector, implementation used for the experiments},
+	howpublished = {\url{https://github.com/nielstenboom/recurring-content-detector}}
+}
+
+
+
+
