--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \newpage
 
 \begin{abstract}
-This thesis presents research on image retrieval-based approaches for recurring content detection in Video On Demand (VOD) TV-shows. The method utilizes feature vectors constructed from video frames and an image retrieval framework to efficiently compare similarities across TV-show episodes. With such methods the best precision score achieved was 0.884 and the best recall score achieved was 0.892 for recurring content, an altered experimental setup for bumper detection achieved a best precision score of 0.611 and a best recall score of 0.979. With these results we present novel research for unsupervised detection of recurring content in VOD content.
+This thesis presents research on image retrieval-based approaches for recurring content detection in Video On Demand (VOD) TV-shows. The method utilizes feature vectors constructed from video frames and an image retrieval framework to efficiently compare frame similarity across TV-show episodes, these frame similarities are then used to determine recurring parts. With such methods the best precision score achieved was 0.884 and the best recall score achieved was 0.892 for recurring content, an altered experimental setup for bumper detection achieved a best precision score of 0.611 and a best recall score of 0.979. With these results we present novel research for unsupervised detection of recurring content in VOD shows.
 \end{abstract}
 \newpage
 
@@ -54,7 +54,7 @@ There is little margin for error with this solution. The accuracy of the end res
 This thesis presents research on unsupervised detection of recaps, opening credits, bumpers, closing credits and previews given the video files from a TV-show. We are going to attempt to tackle this problem by using image retrieval techniques. The motivation behind this is that the overlapping characteristic of the segments is that they reoccur. To be able to detect recurring content we are going to compare similarities of frames across content, this should be done efficiently and accurately, both attributes are important in image retrieval research. Our main research question then is:
 \newline
 \begin{adjustwidth}{0.3in}{0.3in}
-\textit{\textbf{How well do image retrieval methods perform in accurately detecting recurring content across a TV-show?\newline}}
+\textit{\textbf{How well does an image retrieval approach perform in accurately detecting recurring content across a TV-show?\newline}}
 \end{adjustwidth}
 With the subquestions: \\
 \begin{adjustwidth}{0.3in}{0.3in}
@@ -62,14 +62,14 @@ With the subquestions: \\
 	\textit{\textbf{How accurate is each image retrieval approach?\newline}}\\
 	\textit{\textbf{How can the best method be utilized in practice?\newline}}
 \end{adjustwidth}
-This thesis aims to answer aforementioned research questions. Our hypothesis is that such a method works very well. The rest of this section will be used to expand on the different type of video classes which this research is focused on. Section \ref{relatedwork} explains all of the related work. In Section \ref{section:imageretrieval} image retrieval and the used methods are expanded upon. Section \ref{methodology} describes the data and methodology and then the produced results are presented in Section \ref{results}. Lastly, the results are discussed and a conclusion is drawn in Section \ref{discussion}.
+This thesis aims to answer aforementioned research questions. Our hypothesis is that such a method works very well. The rest of this section will be used to expand on the different type of video classes which this research is focused on. Section \ref{relatedwork} explains all of the related work. In Section \ref{section:imageretrieval} image retrieval and the used methods are expanded upon. Section \ref{methodology} describes the data and methodology and then the produced results are presented in Section \ref{results}. Lastly, the results are discussed in section \ref{discussion} and a conclusion is drawn in Section \ref{conclusion}.
 
 \subsection{Recurring Content Classes} \label{section:segmentclasses}
 In this section we will give a background on the different types of content to be detected. What all the content classes have in common is that they (partially) reappear in previous or future episodes or as is the case with bumpers: that the content reappears within the episode itself. We will use this attribute for the detection. Example frame grabs from each of the content classes can be viewed in Figure \ref{fig:introductionexamples}.
 
 \begin{figure}[h]
 	\makebox[\textwidth][c]{\includegraphics[width=\paperwidth,center, scale=0.8]{images/introduction_examples.jpg}}
-	\caption{\textbf{Frame grabs from each recurrent content class.}}
+	\caption{\textbf{Frame grabs from each recurring content class.}}
 	\label{fig:introductionexamples}
 \end{figure}
 
@@ -77,23 +77,23 @@ In this section we will give a background on the different types of content to b
 A television show typically has recaps before the opening credits. In the recaps content of previous episodes is repeated to refresh the viewer's memory. This is useful for linear TV when an episode is aired every week. Someone watching episodes back-to-back ideally wants to skip the recaps together with the opening credits because they have seen the content recently. Not all material preceding the opening credits is a recap though, it can be original content.
 
 \subsubsection{Opening credits}
-The opening credits of a TV-show are generally the same for all of the episodes in the same season. It typically opens the show with a theme song, presenting the most important actors at the start. If the sequence is known beforehand then it would be a more simple problem to solve, by matching this sequence with all of the videos to locate the opening credits. But there is also no prior knowledge on how the opening credits of a show look like and they often change every season.
+The opening credits of a TV-show are generally the same for all of the episodes in the same season. It typically opens the show with a theme song, presenting the most important actors at the start. There is no prior knowledge on how the opening credits of a show look like and they often change every season, therefore the detection should be unsupervised.
 
 \subsubsection{Bumpers}
-The bumper is a part of the video that eases a viewer into the upcoming commercial. Most of the times it has a voice over and text on screen saying: 'Next' (or the dutch translation of 'next') and some footage of what is to be expected after the commercial break is shown.
+The bumper is a part of the video that eases a viewer into the upcoming commercial. Most of the times it has a voice over and text on screen saying: 'Next' (or the dutch translation of 'next') and footage of what is to be expected after the commercial break is shown.
 
 \subsubsection{Previews}
 A preview is a segment at the end of an episode where an advance showing of fragments of the next episode(s) are played. Previews can typically be found in content that was created specially for broadcast TV. It gives the viewer a taste of what to expect in the next episode that will air a week later. These previews may contain overlayed credits of people who helped in the production of the show.
 
 \subsubsection{Closing Credits}
-The closing credits at the end of a video contain a lot of scrolling text most of the time and there is little variation between the frames. In these texts everybody related to the production of the video is mentioned. In general the frames all have a black background with white text. But backgrounds can also vary, therefore a solution that simply looks for black and white would not suffice.
+The closing credits at the end of a video mostly consist of scrolling text and there is little variation between the frames. In these texts everybody related to the production of the video is mentioned. In general the frames all have a black background with white text. But backgrounds can also vary, therefore a solution that simply looks for black and white would not suffice.
 
 \subsection{Definitions and Techniques}
 This section will be used to elaborate on some topics mentioned in this thesis. We define a season with multiple episodes of a TV-show as T.
 \[T = \{E_1, E_2, \dots, E_x\}\]
 An episode within a season is defined as a set of frames.
 \[E = \{f_1, f_2, \dots, f_y\}\]
-The videos contain shot boundaries, we refer the set of locations of shotboundaries as B.
+The videos contains shot boundaries, we refer the set of locations of shotboundaries as B.
 \[B = \{b_1, b_2, \dots, b_z\}\]
 
 \subsubsection{Shot Change Detection}
@@ -107,7 +107,7 @@ Shot detection is a technique that can be used on videos to determine shot bound
 	\label{shotchange}
 \end{figure}
 
-Shot detection is going to be used and thus will we expand on it. A lot of research has been done related to shot detection \cite{lienhart1998comparison} and many techniques have been proposed. 
+Shot detection is going to be used and thus will we expand on it. Many has been done related to shot detection \cite{lienhart1998comparison} and many techniques have been proposed. 
 
 We use a method that looks at the shift in mean color in HSV space \cite{shao2015shot}. HSV (Hue, Saturation, Value) color space is a more intuitive color mixing model compared to RGB (Red, Green, Blue) color space. Because one can change a value in either of the three values in HSV and expect what the new color is going to look like. This is almost impossible for RGB because for this same color change to happen, you need to change all three red, green and blue values to result in the same color space.
 
@@ -146,7 +146,7 @@ With the unsupervised methods the authors typically do a dimensionality reductio
 %vergelijkbare dingen
 Abduraman et al.\ \cite{abduraman2011unsupervised} propose a system to detect repeated sequences in streams by performing a DCT operation on all of the frames in the stream and then use a micro clustering technique to detect repeated sequences. They were also able to link the trailers to their respective programs that occur at a later point in the stream.
 
-All of the previously mentioned works in this section never cover the specific topic of segmenting the classes mentioned in Section \ref{section:segmentclasses} or use other properties only available to broadcast streams such as the EPG. The methods also focused  on recurrent content detection are exclusively based on detection of moderate to long sequences, it does not cover short recurrent sequences stitched together such as a recap. The methods yielded high accuracies in the range of 90\% - 95\% precision, also most research is from many years ago and work that focuses on repeated sequence detection in broadcast streams do not vary much in methodology. This work is not focused on broadcast streams and aims for higher accuracies and thus will not be replicating the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to efficiently process a large visual data set.
+All of the previously mentioned works in this section never cover the specific topic of segmenting the classes mentioned in Section \ref{section:segmentclasses} and use other properties only available to broadcast streams such as the EPG. The methods also focused on recurring content detection are exclusively based on detection of moderate to long sequences, it does not cover short recurring sequences stitched together such as a recap. The methods yielded high accuracies in the range of 90\% - 95\% precision, also most research is from many years ago and work that focuses on repeated sequence detection in broadcast streams do not vary much in methodology. This work is not focused on broadcast streams and aims for higher accuracies and thus will not be replicating the previously mentioned methodologies, however from the aforementioned papers we conclude that a large dimensionality reduction step will be necessary to efficiently process a large visual data set.
 \\
 
 Dimensionality reduction and efficient matching of large amounts of visual data is important within content based image retrieval, Zheng et al. give a very detailed summary of all the significant contributions from past years \cite{zheng2018sift}. Their summary covers three periods in image retrieval: Early methods, SIFT-based methods and Convolutional Neural Network (CNN) based methods. Smeulders et al. present all the contributions of the early methods \cite{smeulders2000content}, these methods focused on looking at the color, texture and local geometry of images for retrieval \cite{yu2002color,manjunath1996texture}. Not much later the Bag-of-words (BoW) model was proposed as a new method for image retrieval \cite{sivic2003video}. The advantage of this is that inverted indexes can be used for immediate retrieval of similar images. The BoW model paired with SIFT-descriptors \cite{lowe2004distinctive} as the feature vectors was used in image retrieval research for years \cite{nister2006scalable,philbin2007object,jegou2008hamming,jegou2010aggregating,jegou2012aggregating}. Since 2012 when the convolutional neural network was introduced \cite{krizhevsky2012imagenet} research switched to CNN-based methods for image retrieval because they achieved better performance on several image retrieval tasks	 \cite{babenko2014neural,yue2015exploiting, tolias2015particular}.
@@ -186,12 +186,12 @@ In the case of image retrieval the query consists of an image for which the best
 	\label{fig:imageretrieval}
 \end{figure}
 
-\textbf{Text-based image retrieval} refers to retrieval of images based on textual metadata associated with these images. It matches images based on for instance their titles, keywords and more. The downside of this method is that if there is no metadata available then it needs to be added manually. With the growing sizes of image databases this can become quite inefficient, hence the more focus on content-based image retrieval in past years \cite{rajam2013survey}.
+\textbf{Text-based image retrieval} refers to retrieval of images based on textual metadata associated with these images. It matches images based on their titles, keywords and more. The downside of this method is that if there is no metadata available then it needs to be added manually. With the growing sizes of image databases this can become quite inefficient, hence the more focus on content-based image retrieval in past years \cite{rajam2013survey}.
 
 \textbf{Content-based image retrieval} is retrieval based on the content of the image rather than the metadata as is the case with concept-based image retrieval. Computer vision is used to evaluate the image similarity, this can be done by looking at colors, shapes, textures and more. The advantage of content based image retrieval is that it does not rely on the metadata of images and thus does not require manual labeling.
 
 \subsection{Feature vectors}
-A feature vector is a vector containing a numeric representation of multiple characteristics of an object. In this case the objects will be images, the frames of a video. To illustrate feature vectors for images, a small example will be given. Consider the following three images of 10 by 10 pixels consisting only of black or white pixels in Figure \ref{featurevectorimages}.
+A feature vector is a vector containing a numeric representation of multiple characteristics of an object. In this case the objects are images, the frames of a video. To illustrate feature vectors for images, a small example is given. Consider the following three images of 10 by 10 pixels consisting only of black or white pixels in Figure \ref{featurevectorimages}.
 
 If we would like to measure the image similarity between these pictures then we could do this on a pixel-per-pixel basis, this could work for low dimensional images. But comparing HD images consisting of 1920 pixels by 1080 pixels would require massive computation and will require extensive logic to handle small deviations between images. This can be resolved by creating feature vectors to represent the images. A representation for these example images could be the number of black and white pixels in the image. This results in the feature vector $\textbf{x} = [\#\;white\;pixels, \#\;black\;pixels]^T$. This vector can now be represented in 2D-space, and compared to other vectors in 2D space by calculating the distance between other points in that space. The distance is computed by calculating the euclidean distance between each vector.
 
@@ -212,7 +212,7 @@ If we would like to measure the image similarity between these pictures then we 
 	\label{featurevectorimages}
 \end{figure}
 
-In Figure \ref{fig:distanceexample} the plotted feature vectors and the distances between them can be viewed. Example images 2 and 3 are the most alike because the distance between them is the smallest. 
+In Figure \ref{fig:distanceexample} the plotted feature vectors and the distances between them can be viewed. Example images 2 and 3 are the most alike because the distance between them is the smallest. Which seems in line with a visual inspection.
 
 \begin{figure}[H]
 	\includegraphics[width=8cm]{images/distanceexample.png}
@@ -226,12 +226,12 @@ The similarity of images can be retrieved by computing the distance between thei
 %Misschien uitwijden over local en global descriptors
 As mentioned in Section \ref{relatedwork}, Zheng et al. \cite{zheng2018sift} outline three significant periods in image retrieval, the early methods focused on global descriptors mostly based on color and texture. These global descriptors were not good at handling image changes in illumination, translation, occlusion and truncation. This gave rise to local descriptors based SIFT methods until recently CNN-descriptors became the most popular. 
 
-We want to determine whether global or local descriptors are needed. Therefore we take two different global descriptor methods and one one recent local descriptor method with one of the best performances. The methods are color histograms as a global descriptor, color texture moments \cite{yu2002colortexturemoments} as a method that combines the color and texture of an image and lastly CNN-descriptors were implemented as local descriptors.
+We want to determine whether global or local descriptors are needed. Therefore we take two different global descriptor methods and one recent local descriptor method with one of the best performances. The chosen methods are color histograms as a global descriptor, color texture moments \cite{yu2002colortexturemoments} as a method that combines the color and texture of an image and lastly CNN-descriptors were implemented as local descriptors.
 
 This is not an exhaustive list of methods, but because computing feature vectors for a large amount of frames is resource intensive, we limited ourselves to these three. If one of the methods achieves promising results then future research can expand on variations of the method or if none of the methods achieve acceptable results, then future research could try other distinct methods.
 
 \subsection{Color Histograms}
-A color histogram is a representation of the distribution of colors in an image. Color histograms are a flexible and low dimensional way of representing images. A color histogram can be computed by counting the number of pixels in a certain color range, the size of this range is variable, called the bin size. A larger bin size results in lower dimensions of the resulting histogram. For example, if one chooses a bin size that is half of the intensity range. The resulting vector would have 6 dimensions, two bins for each color channel. See Figure \ref{fig:colorhistogram} for an example with such a bin size.
+A color histogram is a representation of the distribution of colors in an image. Color histograms are a flexible and low dimensional way of representing images. A color histogram can be computed by counting the number of pixels in a certain color range, the size of this range is variable, called the bin size. A larger bin size results in lower dimensions of the resulting histogram. For example, if one chooses a bin size that is half of the intensity range. The resulting vector would have 6 dimensions, two bins for each color channel. See Figure \ref{fig:colorhistogram} for an example color histogram with such a bin size.
 \begin{figure}[H]
 	\includegraphics[width=8cm]{images/colorhistogram.png}
 	\centering
@@ -252,7 +252,7 @@ Color texture moments as proposed by Yu et al. \cite{yu2002colortexturemoments} 
 
 Which results in 8 channels for each color map, 24 channels in total. For each of the resulting channels the first and second color moments, which are the mean and standard deviation, are taken. This results in a 48-dimensional feature vector.
 
-\subsection{CNN Features} 
+\subsection{CNN Features} \label{subsection:cnnfeatures}
 Convolutional neural networks are very good at image classification and segmentation tasks. However it was found that using the resulting channels after the convolution layers as feature vectors also performs well at image retrieval tasks. There are many ways to construct CNN feature vectors that perform well as described in \cite{zheng2018sift}.
 
 We will use the Regional Maximum Activation of Convolutions (R-MAC) method introduced by Tolias et al. \cite{tolias2015particular} as our implementation for the feature vectors. The frames are fed through a pre-trained VGG16 neural network. The last fully connected layers of the network are discarded, and the resulting channels with activations from the convolutional layers are divided up into regions. For each of these regions the Maximum Activations of Convolutions (MAC) feature vector is calculated, and all these feature vectors are then post-processed by applying L2-normalization, PCA-whitening and L2-normalization. Then all the feature vectors are summed into one resulting feature vector and L2-normalization is applied one last time as the final step, resulting in a 512-dimensional vector. For a more extensive description, one can refer to \cite{tolias2015particular}.
@@ -264,12 +264,12 @@ The characteristic of all the segment classes is that they reoccur either in pre
 
 We will do separate experiments for the bumper detection as they require a different approach for detection because they only contain recurring content from within the episode itself.
 
-All of the experiments were set up in Python and executed on AWS m4.2xlarge instances.
-
+All of the experiments were coded in Python and the code of the experiments can be found on Github \cite{own-github}.
+%and executed on AWS m4.2xlarge instances
 \subsection{Data}
 The data set contains 80 video files originating from 16 different seasons of tv-shows, amounting to around 50 hours of content. Only for three of these seasons do we use the full array of episodes, from the rest of the seasons, only the first three episodes will be looked at to have a more varied data set. Originally these files were in .mxf full broadcast format, this meant each file being 25GB on average. All the files were converted to MP4 files having a width of 320 pixels width and the length to maintain the aspect ratio. The resizing step was done to drastically decrease the computing time needed. The conversion was done with FFmpeg \cite{ffmpeg}.
 
-For each file the start and end timestamps for the recaps, opening credits, closing credits and previews were annotated in HH:MM:SS format in a CSV file, so that it could be loaded and compared effectively.
+For each file the start and end timestamps for the recaps, opening credits, bumpers, closing credits and previews were annotated in HH:MM:SS format in a CSV file, so that it could be loaded and compared effectively.
 
 \begin{table}[h]
 	\begin{adjustwidth}{-.5in}{-.5in}  
@@ -291,7 +291,7 @@ For each file the start and end timestamps for the recaps, opening credits, clos
 	\label{table:datastatistics}
 \end{table}
 
-Table \ref{table:datastatistics} shows the distribution of the different recurring content classes. It can be noted that the classes are not in balance, the recurring content is weighted towards recaps and opening credits. Recurring content consists of 4.9\% of the total content, thus with a perfect method, that is the percentage of time we save of people watching the content back-to-back.
+Table \ref{table:datastatistics} shows the distribution of the different recurring content classes. It can be noted that the classes are not in balance, the recurring content is weighted towards recaps and opening credits. Recurring content consists of 4.9\% of the total content, thus with a perfect method, that is the percentage of time we could save of people watching the content back-to-back.
 
 \subsection{Feature Vector Construction}
 Video usually plays at 25 frames per second, frames very close to each other should only have very slight variations. That is why frames every 3 frames or just shotboundary frames will be taken into account to reduce the computing complexity. We take all the video files of a season $E_x \in T$ and convert each file to a set of feature vectors $S_x = \{v_1, v_2, \dots, v_l\}$ with the function $f$.
@@ -301,20 +301,25 @@ Video usually plays at 25 frames per second, frames very close to each other sho
 The rest of the subsections will expand on different implementations of the function $f$, how the different types of feature vectors are constructed. We use three different methods for the feature vector construction. These methods were chosen because of their efficient computation and accuracy in image retrieval tasks and to see if there is a difference between global and local descriptors applied to this problem. The methods chosen were color histograms, color texture moments and CNN features.
 
 \subsubsection{Color Histograms}
-For the construction of the color histograms the pixels intensities in each channel (Red, Green, Blue (RGB)) are counted and binned according to a specified bin size. All these bins will be concatenated to result in a feature vector, the size of the feature vector is a result of the chosen bin size.
+For the construction of the color histograms the pixel intensities in each channel (Red, Green, Blue (RGB)) are counted and binned according to a specified bin size. All these bins will be concatenated to result in a feature vector, the size of the feature vector is a result of the chosen bin size.
 
-60 bins are used to represent a single color channel. These are then concatenated into a 1D vector, resulting in a feature vector with a dimensionality of 180. This vector is then L1 normalized, such that:
+60 bins are used to represent a single color channel. These are then concatenated into a 1D vector, resulting in a feature vector \textbf{v} where $|\textbf{v}| = 180$. This vector is then L1 normalized, such that:
 
 \[\textbf{v} = \frac{v_i}{\sum_{i=1}^{n}|v_i|}\]
 
 A histogram is computed for every 3 frames or shotboundary frame in the video and then stored and saved in a list that preserves the order of the video. This method will be named CH in the results section.
 
 \subsubsection{Color Texture Moments}
-This section will be called CTM in the results section. TODO write completely
 
+Each filter A with dimensions M x M from Figure \ref{fig:filters} is convolved with each HSV color channel B per frame of interest:
+
+\[ C[i,j] = \sum_{m=-\frac{M}{2}}^{\frac{M}{2}}\sum_{n=-\frac{N}{2}}^{\frac{N}{2}} A[m, n] B[i-m, j-n] \]
+This results in 3 * 8 = 24 channels, of which the mean $\mu$ and standard deviation $\sigma$ are and concatenated into a single vector \textbf{v}, meaning that $|\textbf{v}| = 48$. This section will be called CTM in the results section. 
 
 \subsubsection{CNN Features}
-For the computation of the CNN feature vectors we use a Github re-implementation written in Python \cite{rmac-github}. This section will be called CNN in the results section. TODO write completely
+For the computation of the CNN feature vectors we use a re-implementation written in Python from Github \cite{rmac-github}. Frames sized 224x224 will be fed through an Imagenet pre-trained VGG16 neural network and on the channels before the fully connected layers the steps described in section \ref{subsection:cnnfeatures} are applied. Resulting in the single vector \textbf{v} where $|\textbf{v}| = 512$.
+
+This section will be called CNN in the results section.
 
 
 \subsection{Matching and Detection}
@@ -322,7 +327,7 @@ For the computation of the CNN feature vectors we use a Github re-implementation
 All the resulting lists of feature vectors will be added to the index of an empty Faiss instance. Faiss is a library for efficient similarity search of dense vectors \cite{faiss, faiss-github} and thus perfectly suited for our task. This library will efficiently handle building the inverted index and nearest neighbor matching. The science that is behind large scale matching of dense vectors is a research area on its own, but outside the scope of this thesis. We use Faiss because it is released as an open source library and therefore easy to use in an implementation.
 
 \begin{figure}[H]
-	\includegraphics[width=\textwidth, center, scale=0.85]{images/thesisdiagram.png}
+	\includegraphics[width=\textwidth, center, scale=0.75]{images/thesisdiagram.png}
 	\centering
 	\caption{\textbf{Diagram of the described methodology. The recurring content detection process for episode 2 is portrayed.}}
 	\label{fig:diagram}
@@ -386,7 +391,7 @@ Because it is possible for the manual annotation to also be slightly inaccurate,
 \begin{figure}[h]
 	\makebox[\textwidth][c]{\includegraphics[scale=0.6]{images/precision-recall.png}}
 	\centering
-	\caption{Precision-Recall curves for each recurrent content class for the percentile values in [2.5, 20]. Data points that are in the upper right indicate good performance.}
+	\caption{Precision-Recall curves for each recurrent content class for the percentile values in the range [2.5, 20]. Data points that are in the upper right indicate good performance.}
 	\label{fig:precision-recall}
 \end{figure}
 
@@ -428,13 +433,13 @@ Figure \ref{fig:evaluation-example-bumpers} depicts how the precision and recall
 %interpretations
 The results show that for the recurrent segment detection, the results for each different method for feature vector construction are quite close. Meaning that the way the feature vectors are constructed does not improve the results significantly when looking at the total results. However, when looking at the scores for each class separately in Figure \ref{fig:precision-recall}, it can be noticed that the CNN-method does better on the recaps and previews retrieval tasks. Possible explanations for this could be that the CNN-method is a local descriptor as opposed to a global one, therefore being able to handle the more tough cases of recaps and previews. Another explanation could be that higher dimensionality vectors are more suited, because the CNN vectors had the highest dimensionality.
 
-Table \ref{table:resultsrecurring} presents that using the shotboundaries results in lower recall scores compared to the uniform sampling of taking a frame every 3 frames. An possible explanation is that the shotboundary frames sometimes mismatch because the content shown does not consist of full shots.
+Table \ref{table:resultsrecurring} presents that using the shotboundaries results in lower recall scores compared to the uniform sampling of taking a frame every 3 frames. A possible explanation is that the shotboundary frames sometimes mismatch because the content shown does not consist of full shots.
 
 %shotboundaries werken minder goed
 
 Moreover, it is noticed that in total, the detection results are decent but not extraordinary, meaning that there is room for improvement in the methodology. 
 
-From the results of the bumper detection we notice there is a difference in results for each method. The CNN-based method outperforms the other methods significantly. An explanation for this could be that again the CNN feature vectors are local descriptors, it could be possible that the ratio test favors these kind of descriptors as it was first proposed in a paper about a local descriptor.
+From the results of the bumper detection we notice there is a difference in results for each method. The CNN-based method outperforms the other methods significantly. An explanation for this could be that again the CNN feature vectors are local descriptors, it could be possible that the ratio test favors these kind of descriptors as it was first proposed in a paper introducing a local descriptor.
 
 %implications: why do the results matter
 With these results we set the first steps towards a fully automated solution for detection of recurrent content. Many research has been done on broadcast streams, this thesis presents the first results on VOD content. Based on the results of the experiments it becomes clear that feature vectors constructed via a CNN have the most potential for the application to our problem.
@@ -442,10 +447,10 @@ With these results we set the first steps towards a fully automated solution for
 %limitations: what can't the results tell us
 The experiments were mostly performed on the first three episodes of a single season. However, an end-solution would take a whole season into account. Also, sometimes the recurring content spans across different seasons (recapping the previous season in the first episode for example), our experiments did not take this attribute into account.
 
-The bumper detection is based on how RTL inserts its bumpers into content. With our experiments, we did not test if our methodology also applies to the bumpers of other publishers of commerical content.
+The bumper detection is based on how RTL inserts its bumpers into content. With our experiments, we did not test if our methodology also applies to the bumpers of other publishers of commercial content.
 
 %recommendations: future studies
-Ideally, future studies could be performed on a larger dataset consisting of full seasons of several shows to further prove the validity of this method and these future studies could try variations of the methodology and different ways of constructing the CNN feature vectors. Also the experiment could be repeated with data where the recurrent content classes are more in balance to verify the results.
+Future studies could be performed on a larger dataset consisting of full seasons of several shows to further prove the validity of this method and these future studies could try variations of the methodology and different ways of constructing the CNN feature vectors. Also the experiment could be repeated with data where the recurrent content classes are more in balance to verify the results.
 \\
 
 \iffalse
@@ -465,8 +470,8 @@ Future work: \\
 \fi
 
 
-\section{Conclusion}
-In this thesis we explored how well an image retrieval based approach could detect recurring content in a TV-show in an unsupervised manner. Experiments were performed using three different kind of feature vectors. Based upon these experiments we can conclude that an image retrieval based approach definitely has potential for the unsupervised detection of recurrent content in TV-Shows. The experiments showed that the three different methods all get reasonable results. Overall, it is found that the CNN-based method has the most potential. Using this method for a metadata labeling task will still require manual supervision. Future research is needed to improve upon the methodology or to other implementations of CNN-based feature vectors. This thesis presents novel research for the unexplored research area of recurring content detection that is focused on VOD content.
+\section{Conclusion} \label{conclusion}
+In this thesis we explored how well an image retrieval based approach could detect recurring content in a TV-show in an unsupervised manner. Experiments were performed using three different kind of feature vectors. Based upon these experiments we conclude that an image retrieval based approach definitely has potential for the unsupervised detection of recurrent content in TV-Shows. The experiments showed that the three different methods all get reasonable results. Overall, it is found that the CNN-based method using uniform frame sampling has the most potential. Using this method for a metadata labeling task will still require manual supervision. Future research is needed to improve upon the methodology or to experiment with other implementations of CNN-based feature vectors. This thesis presented novel research for the unexplored research area of recurring content detection that is focused on VOD content.
 
 \bibliographystyle{ieeetr}
 \bibliography{references}
